--- a/.github/workflows/tf.yaml
+++ b/.github/workflows/tf.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           terraform_version: "1.1.7"
       - name: terraform init
-        run: terraform init
+        run: terraform init -reconfigure
       - name: teraform plan
         run: terraform plan -out=tfplan
       - name: terraform apply
