--- a/.github/workflows/tf.yaml
+++ b/.github/workflows/tf.yaml
@@ -16,6 +16,10 @@ jobs:
           terraform_version: "1.1.7"
       - name: terraform init
         run: terraform init -reconfigure
+      - name: terraform format
+        run: terraform fmt
+      - name: terraform validate
+        run: terraform validate
       - name: teraform plan
         run: terraform plan -out=tfplan
       - name: terraform apply
